<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StudyBuddy</string>
    <string name="welcome_text">Experience a whole new way of doing group study!</string>
    <string name="sup">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login_txt">Welcome back you\'ve been missed!</string>
    <string name="email">Email</string>
    <string name="sample_email">jon.doe2021@vitstudent.ac.in</string>
    <string name="password_hint">******************</string>
    <string name="password">Password</string>
    <string name="f_pass_pre_text">trouble getting in?</string>
    <string name="f_pass">Forgot Password</string>
    <string name="sup_pre_text">Don\'t have an account?</string>
    <string name="sup_screen_text">Hello there, create an account it\'s free!</string>
    <string name="sample_name">Jon Doe</string>
    <string name="sample_phn">7007004000</string>
    <string name="name">Name</string>
    <string name="phn">Phone Number</string>
    <string name="RegistrationNumber">Registration Number</string>
    <string name="sample_regno">21BEE0001</string>
    <string name="major">Major</string>
    <string name="sample_major">EEE</string>
    <string name="batch">Batch</string>
    <string name="sample_batch">2025</string>
    <string name="bio">Bio</string>
    <string name="sample_bio">Hello everyone I am Jon Doe i am currently a fresher in VIT Vellore.</string>
    <string name="app_logo">App Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="wrong_details">wrong</string>
    <string name="email_regex" tools:ignore="TypographyDashes"><![CDATA[^[a-zA-Z0-9_!#$%&\'*+/=?`{|}~^.-]+@[a-zA-Z0-9.-]+$]]></string>
    <string name="phone_no_regex">^(\\+91[\\-\\s]?)?[0]?(91)?[789]\\d{9}$</string>
    <string name="reg_no_regex" tools:ignore="TypographyDashes">^[0-9]{2}[A-Z]{3}[0-9]{4}$</string>

    <string name="empty_fields">All fields are necessary!</string>
    <string name="vit_domain">vitstudent.ac.in</string>
    <string name="account_creation_text">Account created successfully check your email to get verified!</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="your_groups">Your Groups</string>
    <string name="your_groups_will_show_here">Your Groups will show here</string>
    <string name="profile">Profile</string>
    <string name="_1">1.</string>
    <string name="module_name">Differential Equations</string>
    <string name="course_code">BMAT201L</string>
    <string name="modules">Modules:</string>
    <string name="_10">10</string>
    <string name="proceed">Proceed</string>
    <string name="members_present">Members Present:</string>
    <string name="sign_out">Sign Out</string>
    <string name="back_button">Back</string>
    <string name="members">Members</string>
    <string name="sample_group_name">Differential Equations</string>
    <string name="sample_subject_name">BMAT101L</string>
    <string name="button">Button</string>
    <string name="quizzes">Quizzes</string>
    <string name="sample_quizzes">1</string>
    <string name="send_invite">Send Invite</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc mattis enim ut tellus elementum sagittis. Ullamcorper morbi tincidunt ornare massa eget. Etiam sit amet nisl purus in mollis. In nibh mauris cursus mattis molestie. Magna fringilla urna porttitor rhoncus dolor.</string>
    <string name="module">Modules</string>
    <string name="dashboard">Dashboard</string>
    <string name="footer">Made with ❤ by CodeChef-VIT!</string>
    <string name="group">Group</string>
    <string name="sample_invite_code">6jg-f9o-ghr</string>
    <string name="sub_heading_invite">Add people to group using invite code or by scanning QR Code!</string>
    <string name="heading_group_invite">Send Invite</string>
    <string name="samle_module_name">Ordinary Differential Equations</string>
    <string name="error_text">Some error occured!</string>
</resources>