<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp"
    android:background="@color/background"
    android:id="@+id/sup_layout">

    <!--Logo-->

    <LinearLayout

        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:paddingTop="25sp"
        android:paddingBottom="10sp">

        <ImageView

            android:layout_width="@dimen/logo_w"
            android:layout_height="@dimen/logo_h"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout">

        <LinearLayout
            android:id="@+id/sin_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:theme="@style/text_heading"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sup_screen_text"
                android:theme="@style/sub_heading"/>

            <!--Text Fields-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/email"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/email_sup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_background"
                android:hint="@string/sample_email"
                android:inputType="textEmailAddress"
                style="@style/editText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/name"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/name_sup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/sample_name"
                android:inputType="textPersonName"
                style="@style/editText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/password"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/pass_sup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                style="@style/editText"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/RegistrationNumber"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/regno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sample_regno"
                android:inputType="text"
                android:maxLength="9"
                style="@style/editText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/major"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sample_major"
                android:inputType="text"
                style="@style/editText" />



            <!--Submit Button-->
            <Button
                android:id="@+id/sin_lS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:onClick="signUp_supS"
                android:padding="15sp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/primaryOpposite"
                android:textSize="20sp"
                tools:ignore="UsingOnClickInXml" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsansregular"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/textSecondary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/sup_lS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:fontFamily="@font/ibmplexsanssemibold"
                    android:onClick="sin_sup"
                    android:text="@string/sign_in"
                    android:textColor="@color/accent_secondary"
                    android:textSize="17sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>