<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".activities.LogIn"
    android:id="@+id/login_layout">

    <!--Logo-->

    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="10sp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/logo_w"
            android:layout_height="@dimen/logo_h"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout">

        <LinearLayout
            android:id="@+id/sin_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_heading"
                android:text="@string/sign_in" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibmplexsansregular"
                android:text="@string/login_txt"
                android:textColor="@color/textSecondary"
                android:textSize="20sp" />

            <!--Text Fields-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/email"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:hint="@string/sample_email"
                style="@style/editText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:text="@string/password"
                android:textColor="@color/textSecondary" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                style="@style/editText"
                android:autofillHints="password"/>

            <!--Forgot Password-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsansregular"
                    android:text="@string/f_pass_pre_text"
                    android:textColor="@color/textSecondary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/f_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:fontFamily="@font/ibmplexsanssemibold"
                    android:onClick="f_pass"
                    android:text="@string/f_pass"
                    android:textColor="@color/accent_secondary"
                    android:textSize="15sp"
                    tools:ignore="UsingOnClickInXml" />

            </LinearLayout>

            <!--Submit Button-->
            <Button
                android:id="@+id/sin_lS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:onClick="signIn_lS"
                android:padding="20sp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/primaryOpposite"
                android:textSize="20sp"
                tools:ignore="UsingOnClickInXml" />

            <!--Forgot Password-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsansregular"
                    android:text="@string/sup_pre_text"
                    android:textColor="@color/textSecondary"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/sup_lS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/ibmplexsanssemibold"
                    android:onClick="sup_lS"
                    android:text="@string/sup"
                    android:textColor="@color/accent_secondary"
                    android:textSize="17sp"
                    tools:ignore="UsingOnClickInXml" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>