<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Dashboard"
    android:background="@color/background"
    android:id="@+id/Dashboard">

    <!--Logo-->
    <LinearLayout
        android:layout_marginTop="25sp"
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/logo_w"
            android:layout_height="@dimen/logo_h"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logoLayout">

        <RelativeLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="vertical"
            android:padding="20sp">

            <LinearLayout
                android:id="@+id/button_layout_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/create_group_button"
                    style="@style/button_dashboard_primary_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/button_dashboard"
                    android:text="@string/create_group" />

                <Button
                    android:id="@+id/join_group_button"
                    style="@style/button_dashboard_primary_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/button_dashboard"
                    android:text="@string/join_group" />

            </LinearLayout>

            <Button
                android:id="@+id/profile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/button_background"
                style="@style/button_dashboard_secondary_text_style"
                android:text="@string/profile"
                android:layout_below="@id/button_layout_first"/>

            <LinearLayout
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="vertical"
                android:layout_below="@+id/profile_button">

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_heading_2"
                    android:text="@string/your_groups"/>
                <TextView
                    android:id="@+id/sub_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/sub_heading"
                    android:text="@string/your_groups_will_show_here"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_below="@id/text"/>


        </RelativeLayout>



    </ScrollView>


</RelativeLayout>