<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.WelcomeScreen"
    android:padding="@dimen/padding">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_w"
        android:layout_height="@dimen/logo_h"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/welcome_img"
        android:layout_width="400sp"
        android:layout_height="299sp"
        android:layout_above="@+id/button_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="1dp"
        android:src="@drawable/ic_welcome" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="10sp">
        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/welcome_text"
            android:textColor="@color/textSecondary"
            android:fontFamily="@font/ibmplexsansitalic"
            android:textSize="22sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/button_accent"
            android:text="@string/sup"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/ibmplexsanssemibold"
            android:textSize="18sp"
            android:padding="15sp"
            android:onClick="signUp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textSecondary"
                android:text="@string/already_have_an_account"
                android:textSize="15sp"
                android:fontFamily="@font/ibmplexsansregular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/accent_secondary"
                android:layout_marginStart="7sp"
                android:text="@string/sign_in"
                android:textSize="15sp"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:onClick="logIn"/>

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>