<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashBoardButtonColor"
        app:cardCornerRadius="10sp"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <!--
            <TextView
                android:id="@+id/group_index"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:fontFamily="@font/ibmplexsansregular"
                android:textColor="@color/textPrimary"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

                -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/module_name"
                    android:fontFamily="@font/ibmplexsansmedium"
                    android:textColor="@color/textPrimary"
                    android:textSize="25sp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/group_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_code"
                    android:fontFamily="@font/ibmplexsanslight"
                    android:textColor="@color/textPrimary"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modules"
                        android:fontFamily="@font/ibmplexsansregular"
                        android:textColor="@color/textSecondary"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:id="@+id/group_modules"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_10"
                        android:fontFamily="@font/ibmplexsansmedium"
                        android:textColor="@color/textPrimary"
                        android:textSize="18sp"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/members_present"
                        android:fontFamily="@font/ibmplexsansregular"
                        android:textColor="@color/textSecondary"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:id="@+id/group_members_length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_10"
                        android:fontFamily="@font/ibmplexsansmedium"
                        android:textColor="@color/textPrimary"
                        android:textSize="18sp"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/proceed_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proceed"
                        android:fontFamily="@font/ibmplexsansregular"
                        android:textColor="@color/accent_secondary"
                        android:textSize="15sp"
                        android:gravity="center_vertical"/>

                    <ImageView
                        android:id="@+id/arrow"
                        android:layout_width="15sp"
                        android:layout_height="15sp"
                        android:src="@drawable/ic_arrow_right"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>




            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>